--- a/conf/development.conf
+++ b/conf/development.conf
@@ -11,6 +11,8 @@ server{
   service{
     useDB=true
     database {
+        dbname="`short_url`"
+        tbl_name="`short_link`"
         host="localhost"
         port=3306
         user="root"
