Making changes : + Add basic test for get link api + Rename package + Config docker in pom.xml

--- a/conf/development.conf
+++ b/conf/development.conf
@@ -11,12 +11,12 @@ server{
   service{
     useDB=true
     database {
-        dbname="`short_url`"
-        tbl_name="`short_link`"
+        dbname="link_shorten"
+        tbl_name="tbl_shortlink"
         host="localhost"
         port=3306
         user="root"
-        password="root"
+        password="rever1234"
     }
   }
 }
