--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,29 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <encoding>UTF-8</encoding>
 
-        <scala.version>2.12.8</scala.version>
+        <scala.version>2.12.11</scala.version>
         <finatra.version>20.6.0</finatra.version>
 
         <mainClass>modulex.MainApp</mainClass>
     </properties>
     <dependencies>
-
+        <!-- Rever common -->
+        <dependency>
+            <groupId>vn.rever</groupId>
+            <artifactId>rever-common_2.12</artifactId>
+            <version>1.1.6_20.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>vn.rever</groupId>
+            <artifactId>rever-jdbc_2.12</artifactId>
+            <version>1.0.4_20.6.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.22</version>
+        </dependency>
         <!-- Scala -->
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -144,11 +160,13 @@
             <scope>test</scope>
             <version>1.10.19</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+
+        <!-- 2. Apache Commons DBCP -->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.22</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.8.0</version>
         </dependency>
     </dependencies>
 
@@ -320,6 +338,46 @@
                             <overWriteSnapshots>false</overWriteSnapshots>
                             <overWriteIfNewer>true</overWriteIfNewer>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.26.0</version>
+                <configuration>
+                    <images>
+                        <image>
+                            <name>mysql:8.0.22</name>
+                            <alias>mysql_docker</alias>
+                            <run>
+                                <env>
+                                    <MYSQL_ROOT_PASSWORD>rever1234</MYSQL_ROOT_PASSWORD>
+                                    <MYSQL_DATABASE>link_shorten</MYSQL_DATABASE>
+                                </env>
+                                <ports>
+                                    <port>3306:3306</port>
+                                </ports>
+                            </run>
+                        </image>
+                    </images>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>start</id>
+                        <!--<phase>generate-test-resources</phase>-->
+                        <phase>process-test-classes</phase>
+                        <!--<phase>test</phase>-->
+                        <goals>
+                            <goal>start</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>stop</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
